preparing event listener

--- a/interface/popup.html
+++ b/interface/popup.html
@@ -29,7 +29,7 @@
         <label for="date-ending">Fin:</label>
         <input type="date" id="date-ending">
 
-        <input type="submit" value="Research">
+        <input type="submit" value="Research" id="submitButton">
     </div>
 </body>
 </html>
