research extension working

--- a/interface/popup.html
+++ b/interface/popup.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/popup.css">
-    <script src="js/popup.js"></script>
 </head>
 <body>
     <div class="search-bar">
@@ -28,8 +27,8 @@
 
         <label for="date-ending">Fin:</label>
         <input type="date" id="date-ending">
-
-        <input type="submit" value="Research" id="submitButton">
+        <input type="submit" name="button" value="enter" id="submit">
     </div>
+    <script src="js/popup.js"></script>
 </body>
 </html>
