--- a/interface/popup.html
+++ b/interface/popup.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/popup.css">
 </head>
 <body>
+    <h3>File search : </h3>
     <div class="search-bar">
         <input type="text" id="search" placeholder="Enter you research here...">
 
@@ -27,7 +28,17 @@
 
         <label for="date-ending">Fin:</label>
         <input type="date" id="date-ending">
-        <input type="submit" name="button" value="enter" id="submit">
+        <input type="submit" name="button" value="Research" id="submit">
+    </div>
+    <hr>
+    <h3>Movie Search :</h3>
+    <div class="movie-search">
+        <label for="movie-name">Movie Name:</label>
+        <input type="text" id="movie-name" placeholder="Movie name">
+
+        <label for="language">Language:</label>
+        <input type="text" placeholder="US, UK, FR, ..." id="language">
+        <input type="submit" name="button" value="Research" id="submit-movie">
     </div>
     <script src="js/popup.js"></script>
 </body>
