changing extension search system + adding deeplink search

--- a/interface/popup.html
+++ b/interface/popup.html
@@ -16,6 +16,9 @@
         <label for="raw-search">Raw Search:</label>
         <input type="checkbox" id="raw-search" name="">
         <input type="text" id="extension" placeholder=".ext">
+
+        <label for="deep-links">Deep Web:</label>
+        <input type="checkbox" id="deep-links" name="">
     </div>
     <div class="source-specification">
         <label for="website">Website</label>
